# adventofcode

./: .gitignore
haskell/2022/: aoc2022.cabal  package.yaml
haskell/2022/app/: 1.hs  2.hs
python/: Pipfile
python/2018/1/: 1.py  2.py  input_small_2.txt
python/2018/10/: 1.py  2.py  common.py
python/2018/11/: 1.py  2.py  common.py
python/2018/12/: 1.py  2.py  common.py
python/2018/13/: 1.py  2.py  common.py  test.py
python/2018/14/: 1.py  2.py  common.py
python/2018/15/: 1.py  2.py  common.py  input_small.txt  output.txt
python/2018/16/: 1.py  2.py  common.py
python/2018/17/: 1.py  2.py  common.py  ground_final.txt
python/2018/18/: 1.py  2.py  common.py
python/2018/19/: 1.py  2.py  common.py  input_small.txt
python/2018/2/: 1.py  2.py
python/2018/20/: 1.py  2.py  common.py
python/2018/3/: 1.py  2.py  common.py
python/2018/4/: 1.py  2.py  common.py  input_small.txt
python/2018/5/: 1.py  2.py  common.py
python/2018/6/: 1.py  2.py  common.py
python/2018/7/: 1.py  2.py  common.py
python/2018/8/: 1.py  2.py  common.py
python/2018/9/: 1.py  2.py  common.py
r/1/: solution.R
r/2/: solution.R
r/2023/1/: solution.R
r/2023/3/: small_duplicates.txt  solution.R
r/2023/5/: solution.R
r/2023/6/: solution.R
r/2023/7/: solution.R
r/2023/8/: solution.R
r/2023/9/: solution.R
r/3/: solution.R
r/4/: solution.R
rust/2018/: Cargo.toml
rust/2019/: Cargo.toml
rust/2020/: Cargo.toml
rust/2021/: Cargo.toml
