[package]
name = "aoc-2018-rust"
version = "0.1.0"
authors = ["Eshan Singh <eshansingh@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
thiserror = "1.0"
itertools = "0.9"
binary-heap-plus = "0.4"
cached = "0.20"
regex = "1.4"
clap = "2"
z3 = "0.7"
num = "0.3"
derive_more = "0.99"
parking_lot = { version = "0.12", features = ["nightly"] }
