[package]
name = "aoc-2019-rust"
version = "0.1.0"
authors = ["Eshan Singh <eshansingh@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
anyhow = "1.0.32"
itertools = "0.9"
indexmap = "1.6"
derive_more = "0.99"
digits_iterator = "0.1"
multimap = "0.8"
futures = { version = "0.3", features = ["thread-pool"] }
flume = "0.9"